--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@ audio{width:100%;border-radius:5px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
 <div class="track">
 <div class="title">Self Care Groove</div>
 <audio controls preload="metadata">
-<source src="assets/track1.mp3#t=15" type="audio/mpeg"> <!-- Limite ~15s via #t=15 -->
+<source src="assets/Self Care Groove.mp3#t=15" type="audio/mpeg"> <!-- Limite ~15s via #t=15 -->
 </audio>
 <div class="price">€0.99</div>
-<button class="btn buy" onclick="buy('Track 1')">Acheter</button>
+<button class="btn buy" onclick="buy('Self Care Groove')">Acheter</button>
 </div>
 <!-- Dupliquez pour chaque MP3 -->
 </main>
 <script>
 function buy(title) {
-  alert(`✅ Achat "${title}" ! Téléchargement simulé. (Intégrez Stripe)`)
+  alert(`✅ Achat "${title}" ! Téléchargement simulé. (Intégrez PayPal)`)
 }
 </script>
 </body>
