--- a/index.html
+++ b/index.html
@@ -3,67 +3,81 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
-<title>Shop02 - Boutique Musique Sécurisée Pré-15s</title>
+<title>Shop02 - Boutique Musique Sécurisée Pré-30s</title>
 <style>
-body{font-family:Arial,sans-serif;background:#f4f4f4;margin:0;padding:20px;max-width:900px;margin:auto;user-select:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;}
-header{background:#2c3e50;color:white;text-align:center;padding:2rem;border-radius:10px;box-shadow:0 4px 20px rgba(0,0,0,0.2);}
-.track{background:white;padding:20px;margin:20px 0;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,0.1);display:grid;grid-template-columns:2fr 1fr auto auto;gap:15px;align-items:center;}
-.title{font-size:1.2em;font-weight:bold;color:#2c3e50;}
-.price{color:#27ae60;font-size:1.1em;font-weight:bold;}
-audio{width:100%;border-radius:5px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
-.btn{padding:10px 20px;background:#3498db;color:white;border:none;border-radius:5px;cursor:pointer;font-weight:bold;transition:background 0.3s;}
-.btn:hover{background:#2980b9;}
-.buy{background:#e74c3c;}
-.buy:hover{background:#c0392b;}
-@media (max-width:600px){.track{grid-template-columns:1fr 100px;}}
+body{font-family:'Arial',sans-serif;background:linear-gradient(135deg,#f4f4f4,#e8e8e8);margin:0;padding:20px;max-width:1200px;margin:auto;box-sizing:border-box;user-select:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;}
+header{background:linear-gradient(135deg,#2c3e50,#34495e);color:white;text-align:center;padding:2.5rem 2rem;border-radius:20px;box-shadow:0 10px 30px rgba(44,62,80,0.3);margin-bottom:2rem;}
+h1{font-size:2.5rem;margin:0;font-weight:300;text-shadow:0 2px 10px rgba(0,0,0,0.3);}
+.subtitle{font-size:1.2rem;margin:0.5rem 0;opacity:0.9;}
+.track{background:linear-gradient(135deg,#cd7f32,#b8860b);padding:25px;margin:20px 0;border-radius:20px;box-shadow:0 10px 30px rgba(205,127,50,0.4);display:grid;grid-template-columns:250px 1fr auto auto;gap:20px;align-items:center;transition:all 0.3s ease;}
+.track:hover{transform:translateY(-8px);box-shadow:0 15px 40px rgba(205,127,50,0.6);}
+.cover{width:250px;height:250px;border-radius:15px;box-shadow:0 8px 25px rgba(0,0,0,0.3);object-fit:cover;}
+.title{font-size:1.4rem;font-weight:bold;color:white;text-shadow:0 2px 5px rgba(0,0,0,0.5);margin:0;}
+.artist{font-size:1rem;color:#f4e8c1;opacity:0.9;margin:0 0 10px 0;}
+.price{color:#ffd700;font-size:1.3rem;font-weight:bold;text-shadow:0 1px 3px rgba(0,0,0,0.3);}
+audio{width:100%;height:50px;border-radius:10px;box-shadow:0 4px 15px rgba(0,0,0,0.2);background:#fff;}
+.btn{padding:12px 25px;background:linear-gradient(45deg,#27ae60,#2ecc71);color:white;border:none;border-radius:25px;cursor:pointer;font-weight:bold;font-size:1rem;transition:all 0.3s ease;box-shadow:0 4px 15px rgba(39,174,96,0.4);}
+.btn:hover{transform:translateY(-3px);box-shadow:0 8px 25px rgba(39,174,96,0.6);}
+.buy{background:linear-gradient(45deg,#e74c3c,#c0392b);box-shadow:0 4px 15px rgba(231,76,60,0.4);}
+.buy:hover{box-shadow:0 8px 25px rgba(231,76,60,0.6);}
+.play-btn{background:linear-gradient(45deg,#3498db,#2980b9);margin-right:10px;}
+@media (max-width:900px){.track{grid-template-columns:250px 1fr;grid-template-rows:auto auto;text-align:center;}.cover{margin:0 auto 15px auto;}}
+@media (max-width:600px){.track{grid-template-columns:1fr;}.cover{width:200px;height:200px;}}
 </style>
 </head>
 <body>
 <header>
-<h1>🎵 Shop02 - Boutique Musique</h1>
-<p>Pré-écoutez 15s puis achetez ! Protégé contre téléchargement</p>
+<h1>🎵 Shop02 Boutique Musique</h1>
+<p class="subtitle">Pré-écoutez 30 secondes en haute qualité • Achetez instantanément</p>
 </header>
 <main>
 <div class="track">
-<div class="title">Self Care Groove</div>
-<audio id="audio1" controls preload="metadata" controlsList="nodownload noremoteplayback nopicture-in-picture" oncontextmenu="return false">
-<source src="assets/Self Care Groove.mp3#t=15" type="audio/mpeg">
-Navigateur incompatible.
+<img src="https://via.placeholder.com/250x250/e6b800/ffffff?text=Cover" alt="Cover Self Care Groove" class="cover">
+<div>
+<h2 class="title">Self Care Groove</h2>
+<p class="artist">dbpgrok • Single 2026</p>
+</div>
+<audio id="audio1" controls preload="metadata" controlsList="nodownload noremoteplayback nopicture-in-picture" style="width:350px;">
+<source src="assets/Self Care Groove.mp3#t=30" type="audio/mpeg">
+Votre navigateur ne supporte pas l'audio.
 </audio>
 <div class="price">€0.99</div>
-<button class="btn buy" onclick="buy('Self Care Groove')">Acheter</button>
+<button class="btn play-btn" onclick="playPreview('audio1')">▶️ Rejouer 30s</button>
+<button class="btn buy" onclick="buy('Self Care Groove')">💳 Acheter</button>
 </div>
+<!-- DUPLIQUEZ ce bloc pour chaque nouveau titre -->
 </main>
 <script>
 function buy(title) {
-  alert(`✅ Achat "${title}" confirmé ! Téléchargement complet après paiement.`);
+  alert(`✅ Paiement "${title}" validé ! Lien téléchargement envoyé par email.\n(Stripe/PayPal simulation)`);
 }
 
-// Protections anti-fuite MP3
+// Preview 30s stricte + protections
+function playPreview(id) {
+  const audio = document.getElementById(id);
+  audio.currentTime = 0;
+  audio.play();
+}
+
+// Protections anti-fuite avancées
 document.addEventListener('contextmenu', e => e.preventDefault());
+document.addEventListener('dragstart', e => e.preventDefault());
+document.addEventListener('selectstart', e => e.preventDefault());
 document.getElementById('audio1').addEventListener('contextmenu', e => e.preventDefault());
 document.getElementById('audio1').addEventListener('dragstart', e => e.preventDefault());
-document.getElementById('audio1').addEventListener('selectstart', e => e.preventDefault());
 
-// Limite stricte 15s
-document.getElementById('audio1').addEventListener('loadedmetadata', function() {
-  this.addEventListener('timeupdate', function() {
-    if (this.currentTime > 15) this.pause();
-  });
+// Limite 30s stricte
+document.getElementById('audio1').addEventListener('timeupdate', function() {
+  if (this.currentTime > 30) this.pause();
 });
 document.getElementById('audio1').addEventListener('play', function() {
-  this.currentTime = 0;
-  setTimeout(() => {
-    if (!this.paused) this.pause();
-  }, 15000);
+  setTimeout(() => { if (!this.paused && this.currentTime > 30) this.pause(); }, 30000);
 });
 
-// Anti-inspection raccourcis
-document.addEventListener('keydown', function(e) {
-  if (e.ctrlKey && (e.keyCode === 67 || e.keyCode === 73 || e.keyCode === 85 || e.keyCode === 74)) {
-    e.preventDefault();
-  }
-  if (e.keyCode === 123) e.preventDefault(); // F12
+// Anti-inspection/devtools
+document.addEventListener('keydown', e => {
+  if (e.ctrlKey && (e.key === 'u' || e.key === 's' || e.key === 'i' || e.key === 'j')) e.preventDefault();
+  if (e.key === 'F12') e.preventDefault();
 }, false);
 </script>
 </body>
