--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ audio{width:100%;height:50px;border-radius:10px;box-shadow:0 4px 15px rgba(0,0,0
 .buy:hover{box-shadow:0 8px 25px rgba(231,76,60,0.6);}
 .play-btn{background:linear-gradient(45deg,#3498db,#2980b9);margin-right:10px;}
 .play-btn.active{background:linear-gradient(45deg,#e67e22,#d35400) !important;box-shadow:0 6px 20px rgba(230,126,34,0.6) !important;}
-@media (max-width:900px){.track{grid-template-columns:250px 1fr;grid-template-rows:auto auto;text-align:center;}.cover{margin:0 auto 15px auto;}}
-@media (max-width:600px){.track{grid-template-columns:1fr;}.cover{width:200px;height:200px;}}
+@media (max-width:600px){.track{grid-template-columns:250px 1fr;grid-template-rows:auto auto;text-align:center;}.cover{margin:0 auto 15px auto;}}
+@media (max-width:300px){.track{grid-template-columns:1fr;}.cover{width:200px;height:200px;}}
 </style>
 </head>
 <body>
@@ -36,7 +36,7 @@ audio{width:100%;height:50px;border-radius:10px;box-shadow:0 4px 15px rgba(0,0,0
 <main>
 <!-- Track 1: Hamsterrad-Revolte.mp3 -->
 <div class="track" data-track="1">
-<img src="https://via.placeholder.com/250x250/e6b800/ffffff?text=Hamsterr..." alt="Cover Hamsterrad Revolte" class="cover">
+<img src="https://github.com/dbpgrok/shop02/blob/main/assets/0001.jpg" alt="Cover Hamsterrad Revolte" class="cover">
 <div>
 <h2 class="title">Hamsterrad Revolte</h2>
 <p class="artist">AI101MUSIC • Single 2026</p>
@@ -54,7 +54,7 @@ audio{width:100%;height:50px;border-radius:10px;box-shadow:0 4px 15px rgba(0,0,0
 
 <!-- Track 2: Self Care Groove.mp3 -->
 <div class="track" data-track="2">
-<img src="https://via.placeholder.com/250x250/e6b800/ffffff?text=Self Car..." alt="Cover Self Care Groove" class="cover">
+<img src="https://github.com/dbpgrok/shop02/blob/main/assets/0002.jpg" alt="Cover Self Care Groove" class="cover">
 <div>
 <h2 class="title">Self Care Groove</h2>
 <p class="artist">AI101MUSIC • Single 2026</p>
@@ -72,7 +72,7 @@ audio{width:100%;height:50px;border-radius:10px;box-shadow:0 4px 15px rgba(0,0,0
 
 <!-- Track 3: The Hope Wins.mp3 -->
 <div class="track" data-track="3">
-<img src="https://via.placeholder.com/250x250/e6b800/ffffff?text=The Hope..." alt="Cover The Hope Wins" class="cover">
+<img src="https://github.com/dbpgrok/shop02/blob/main/assets/0003.jpg" alt="Cover The Hope Wins" class="cover">
 <div>
 <h2 class="title">The Hope Wins</h2>
 <p class="artist">AI101MUSIC • Single 2026</p>
@@ -90,7 +90,7 @@ audio{width:100%;height:50px;border-radius:10px;box-shadow:0 4px 15px rgba(0,0,0
 
 <!-- Track 4: trk3.mp3 -->
 <div class="track" data-track="4">
-<img src="https://via.placeholder.com/250x250/e6b800/ffffff?text=trk3" alt="Cover trk3" class="cover">
+<img src="https://github.com/dbpgrok/shop02/blob/main/assets/0004.jpg" alt="Cover trk3" class="cover">
 <div>
 <h2 class="title">trk3</h2>
 <p class="artist">AI101MUSIC • Single 2026</p>
