--- a/index.html
+++ b/index.html
@@ -105,15 +105,51 @@ audio{width:100%;height:50px;border-radius:10px;box-shadow:0 4px 15px rgba(0,0,0
 <button class="btn play-btn" id="playBtn4" onclick="playPreview('4')">▶️ Écouter 30s</button>
 <button class="btn buy" onclick="buy('trk3')">💳 Acheter</button>
 </div>
+
+ <!-- Track 5: Sebene2.mp3 -->
+<div class="track" data-track="5">
+<img src="https://github.com/dbpgrok/shop02/blob/main/assets/0005.jpg" alt="Cover Sebene2" class="cover">
+<div>
+<h2 class="title">Sebene2</h2>
+<p class="artist">AI101MUSIC • Single 2026</p>
+</div>
+<div id="audio-container5" style="display:none;">
+    <div class="loading" id="loading5">🔄 Chargement sécurisé de la pré-écoute...</div>
+    <audio id="audio5" controls preload="none" controlsList="nodownload noremoteplayback nopicture-in-picture" style="width:350px;display:none;">
+        Votre navigateur ne supporte pas l'audio.
+    </audio>
+</div>
+<div class="price">€0.79</div>
+<button class="btn play-btn" id="playBtn5" onclick="playPreview('5')">▶️ Écouter 30s</button>
+<button class="btn buy" onclick="buy('Sebene2')">💳 Acheter</button>
+</div> 
+
+<!-- Track 6: Al Dogma.mp3 -->
+<div class="track" data-track="6">
+<img src="https://github.com/dbpgrok/shop02/blob/main/assets/0006.jpg" alt="Cover Al Dogma" class="cover">
+<div>
+<h2 class="title">Al Dogma</h2>
+<p class="artist">AI101MUSIC • Single 2026</p>
+</div>
+<div id="audio-container6" style="display:none;">
+    <div class="loading" id="loading6">🔄 Chargement sécurisé de la pré-écoute...</div>
+    <audio id="audio6" controls preload="none" controlsList="nodownload noremoteplayback nopicture-in-picture" style="width:350px;display:none;">
+        Votre navigateur ne supporte pas l'audio.
+    </audio>
+</div>
+<div class="price">€0.79</div>
+<button class="btn play-btn" id="playBtn6" onclick="playPreview('6')">▶️ Écouter 30s</button>
+<button class="btn buy" onclick="buy('Al Dogma')">💳 Acheter</button>
+</div>    
 </main>
 <script>
 let audioBlobs = {}; // Stockage des Blobs par ID
 let currentPlayingTrack = null; // Track actuellement en lecture
-const mp3Files = ['Hamsterrad-Revolte.mp3', 'Self Care Groove.mp3', 'The Hope Wins.mp3', 'trk3.mp3'];
+const mp3Files = ['Hamsterrad-Revolte.mp3', 'Self Care Groove.mp3', 'The Hope Wins.mp3', 'trk3.mp3', 'Sebene2.mp3', 'Al Dogma.mp3'];
 
 // Arrête TOUS les autres players + reset visuel
 function stopAllOthers(newTrackId) {
-    for (let i = 1; i <= 4; i++) {
+    for (let i = 1; i <= 6; i++) {
         if (i.toString() !== newTrackId) {
             const audio = document.getElementById(`audio${i}`);
             const trackDiv = document.querySelector(`[data-track="${i}"]`);
